<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.adminIngredient.AddIngredientActivity">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257" />

    <TextView
        android:id="@+id/caloriesTextIM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="Calories"
        app:layout_constraintEnd_toEndOf="@+id/nameText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameText"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/nameText"
        app:layout_constraintStart_toEndOf="@+id/nameText"
        app:layout_constraintTop_toTopOf="@+id/nameText"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/editTextCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/caloriesTextIM"
        app:layout_constraintStart_toEndOf="@+id/caloriesTextIM"
        app:layout_constraintTop_toTopOf="@+id/caloriesTextIM" />

    <Button
        android:id="@+id/confirmButtonIM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:text="confirm"
        app:layout_constraintEnd_toEndOf="@+id/editTextCalories"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toEndOf="@+id/caloriesTextIM"
        app:layout_constraintTop_toBottomOf="@+id/caloriesTextIM" />
</androidx.constraintlayout.widget.ConstraintLayout>