<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainPage.AdminMainPageActivity">

    <Button
        android:id="@+id/searchRecipesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <Button
        android:id="@+id/recipesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="my recipes"
        app:layout_constraintEnd_toEndOf="@+id/searchRecipesButton"
        app:layout_constraintStart_toStartOf="@+id/searchRecipesButton"
        app:layout_constraintTop_toBottomOf="@+id/searchRecipesButton" />

    <Button
        android:id="@+id/ingredientsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="ingredients"
        app:layout_constraintEnd_toEndOf="@+id/recipesButton"
        app:layout_constraintStart_toStartOf="@+id/recipesButton"
        app:layout_constraintTop_toBottomOf="@+id/recipesButton" />

</androidx.constraintlayout.widget.ConstraintLayout>