<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchActivity">

    <EditText
        android:id="@+id/editTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Time in minutes"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="213dp"
        android:layout_height="42dp"
        android:text="Course type"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316" />

    <Button
        android:id="@+id/dessertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dessert"
        app:layout_constraintBottom_toTopOf="@+id/selectIngredientsButton"
        app:layout_constraintEnd_toEndOf="@+id/mainButton"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/mainButton"
        app:layout_constraintTop_toBottomOf="@+id/mainButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/appetizerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Appetizer"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/saladButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salad"
        app:layout_constraintEnd_toEndOf="@+id/appetizerButton"
        app:layout_constraintStart_toStartOf="@+id/appetizerButton"
        app:layout_constraintTop_toBottomOf="@+id/appetizerButton" />

    <Button
        android:id="@+id/mainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Main"
        app:layout_constraintEnd_toEndOf="@+id/saladButton"
        app:layout_constraintStart_toStartOf="@+id/saladButton"
        app:layout_constraintTop_toBottomOf="@+id/saladButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="93dp"
        android:layout_height="51dp"
        android:text="Available time"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/editTime"
        app:layout_constraintEnd_toStartOf="@+id/editTime"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTime" />

    <Button
        android:id="@+id/selectIngredientsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select ingredients"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709" />

</androidx.constraintlayout.widget.ConstraintLayout>