<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1FFFF"
    android:orientation="vertical">


    <ListView
        android:id="@+id/list1"
        android:layout_width="fill_parent"
        android:layout_height="645dp"
        android:divider="#0000CC"
        android:dividerHeight="0.1dp"></ListView>

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="add" />
</LinearLayout>