<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gr.aueb.recipeapp.ui.search.IngredientSelectionActivity">

    <Button
        android:id="@+id/confirmChoicesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="confirm choices" />
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:divider="@null"/>
</LinearLayout>
